<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Navigation Drawer Items-->
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_swipe_animal"
            android:title="@string/nav_swipe"
            android:icon="@drawable/baseline_thumb_up_24" />

        <item
            android:id="@+id/nav_liked_animal"
            android:title="@string/nav_liked"
            android:icon="@drawable/baseline_heart_broken_24" />

        <item
            android:id="@+id/nav_user_history"
            android:title="@string/nav_history"
            android:icon="@drawable/baseline_person_24" />

        <item
            android:id="@+id/nav_user_preference"
            android:title="@string/nav_preference"
            android:icon="@drawable/pawprint" />

        <item
            android:id="@+id/nav_search_animal"
            android:title="@string/nav_search"
            android:icon="@drawable/baseline_search_24" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/baseline_logout_24" />

    </group>

    <!--Need to add setting and Logout button here-->

</menu>