<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tempLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_logo"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        android:paddingTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:srcCompat="@drawable/temp_logo">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_radius20"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowRadius="10"
            android:paddingTop="10dp"
            android:text="@string/signup_email"
            android:textSize="24sp">

        </TextView>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="@string/signup_hint_email"
            android:hint="@string/signup_hint_email"
            android:ems="10"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:shadowRadius="10"
            android:paddingTop="10dp"
            android:text="@string/login_user_password"
            android:textSize="24sp">

        </TextView>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="@string/signup_hint_password"
            android:autofillHints="@string/signup_hint_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/signup_already"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/signup_login"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/signup_login"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text_button" />

</LinearLayout>