<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout_user_preference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".UserPreferenceActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rectangle">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/temp_logo"
                android:padding="5dp"
                android:contentDescription="@string/logo"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginHorizontal="10dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/preference_title"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/preference_title"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/preference_animal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_weight="1"
                                android:text="@string/preference_animal" />

                            <Spinner
                                android:id="@+id/spinnerType"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:layout_weight="1"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="4"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/preference_breed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center"

                                android:text="@string/preference_breed"/>
                            <Button
                                android:id="@+id/btnBreed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/btn_breed"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/preference_age"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/preference_age"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <CheckBox
                                    android:id="@+id/cbBaby"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/preference_age_baby"/>
                                <CheckBox
                                    android:id="@+id/cbYoung"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/preference_age_young"/>
                                <CheckBox
                                    android:id="@+id/cbAdult"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/preference_age_adult"/>
                                <CheckBox
                                    android:id="@+id/ctOld"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/preference_age_old"/>
                            </LinearLayout>
                        </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/preference_crippled"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/preference_crippled" />

                                    <CheckBox
                                        android:id="@+id/cbCrippled"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:id="@+id/preference_neutered"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:layout_weight="1"
                                        android:text="@string/preference_neutered"/>
                                    <CheckBox
                                        android:id="@+id/cbNeutered"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:id="@+id/preference_sick"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:text="@string/preference_sick"/>
                                    <CheckBox
                                        android:id="@+id/cbSick"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"/>
                                </LinearLayout>
                            </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/preference_range"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/preference_range"/>
                            <TextView
                                android:id="@+id/rangeText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:gravity="center"/>
                            <SeekBar
                                android:id="@+id/rangeSeekBar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100"/>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btnSubmitPreference"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>