<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout_open_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rectangle">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/temp_logo"
            android:padding="5dp"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_img"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dog1" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:cardCornerRadius="20dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="300dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:text="@string/animal_name" />
                        <TextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/animal_detail_contact" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/adoption"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/animal_caution"
                            android:textColor="@color/red"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>